assure-173 fix ordering

--- a/src/server/common/templates/layouts/page.njk
+++ b/src/server/common/templates/layouts/page.njk
@@ -33,7 +33,7 @@
   {{ govukHeader({
     homepageUrl: "https://www.gov.uk/",
     containerClasses: "govuk-width-container",
-    serviceName: (serviceName or "DDTS Assurance"),
+    serviceName: (serviceName or "Defra Digital Assurance"),
     serviceUrl: (serviceUrl or "/"),
     useTudorCrown: true,
     rebrand: true
