--- a/src/server/projects/manage/views/select.njk
+++ b/src/server/projects/manage/views/select.njk
@@ -61,7 +61,7 @@
         },
         {
           value: "details",
-          text: "Update project name, phase or ID",
+          text: "Update project name, phase, or ID",
           hint: {
             text: "Change the project name, GDS delivery phase, or project identifier code."
           }
