--- a/src/server/projects/manage/views/select.njk
+++ b/src/server/projects/manage/views/select.njk
@@ -61,9 +61,9 @@
         },
         {
           value: "details",
-          text: "Update project name, phase, or ID",
+          text: "Update project name, phase, ID, or delivery group",
           hint: {
-            text: "Change the project name, GDS delivery phase, or project identifier code."
+            text: "Change the project name, GDS delivery phase, project identifier code, or assigned delivery group."
           }
         }
       ],
