--- a/src/server/delivery-groups/views/index.njk
+++ b/src/server/delivery-groups/views/index.njk
@@ -27,7 +27,7 @@
       }) }}
 
       {% if deliveryGroup.lead %}
-        <p class="govuk-body-l govuk-!-margin-bottom-6">
+        <p class="govuk-body-m govuk-!-margin-bottom-6">
           <strong>Delivery group lead:</strong> {{ deliveryGroup.lead }}
         </p>
       {% endif %}
