--- a/src/server/projects/standards/views/assessment-history.njk
+++ b/src/server/projects/standards/views/assessment-history.njk
@@ -103,7 +103,8 @@
               <p class="govuk-body govuk-!-margin-bottom-0 govuk-!-margin-top-2 govuk-!-font-size-16">
                 Last updated: {{ entry.timestamp | formatDate }}
                 {% if entry.changedBy and entry.changedBy != 'Unknown' and entry.changedBy != 'Unknown User' %}
-                  <br>Updated by: <a href="mailto:{{ entry.changedBy }}" class="govuk-link">{{ entry.changedBy }}</a>
+                  {% set displayName = entry.changedByName or entry.changedBy %}
+                  <br>Updated by: <a href="mailto:{{ entry.changedBy }}" class="govuk-link">{{ displayName }}</a>
                 {% endif %}
               </p>
               
